# Mental_Health_App

./: .replit  app_components.py  data_utils.py  dataset_utils.py  generate_mental_health_dataset.py  interaction_history.csv  main.py  mental_health_dataset.csv  ml_model.py  openai_utils.py  pyproject.toml  ui_components.py  user_auth.py  user_credentials.csv  utils.py
.streamlit/: config.toml
archive/: generate_mental_health_dataset.py  mental_health_dataset.csv
